@@ -65,6 +65,7 @@ int percent(long offset,long size);
 
 int parse_month(const char *);
 int parse_perms(const char *);
+const char *format_perms(int p);
 int parse_year_or_time(const char *year_or_time,int *year,int *hour,int *minute);
 int guess_year(int month,int day,int hour=0,int minute=0);
 
